# credit_scoring

./: README.md  dvc.yaml  final_model.pkl  pyproject.toml  setup.cfg
notebooks/: install_and_work_postgres.ipynb  math_stat_work.ipynb  preprocssing_HomeWork.ipynb
src/: .gitignore
src/app/core/: api.py  calculator.py  catboost_model.cbm  model.py  model_create.ipynb
src/app/modelling/: model.py  model_tree.py
src/app/modelling/data_features/: datast_model_core.csv  shap_importans_model_first
src/app/modelling/features/: README.md  features_application_train_test.py  features_bureau.py  features_bureau_balance.py  features_credit_card_balance.py  features_installments_payments.py  features_previous_application.py
src/app/modelling/metrics/: README_METRICS.md  modeling_model.ipynb
src/app/utils/: db_handler.py  log_parsing.py
src/config/: db_config.py
